examples/invalid/invalid1.vbr
***/
Abortar por usar ==
    /***
moderato() {
    n: quarter|
    str: Melody<half> <-> "=="|
    |> ("Esto deberia fallar por culpa del ")|
    |> (str)|
    |> ('\n')|
    @(n)|
    |> (n == 10)|
}